--- a/applications/SpringBootWeather/src/main/resources/static/index.html
+++ b/applications/SpringBootWeather/src/main/resources/static/index.html
@@ -6,5 +6,13 @@
 </head>
 <body>
     <p><a>Greetings</a></p>
+
+    <form action="/weather" method="GET" id="cityForm">
+        <div>
+            <label for="cityField">Where do you live?</label>
+            <input name="city" id="cityField">
+            <button>How is the weather!?</button>
+        </div>
+    </form>
 </body>
 </html>
